# cellular-automata

./: Cargo.toml  README.md
.github/: preview.webm
src/: automata.rs  main.rs
