[package]
name = "cellular-automata"
version = "0.1.0"
authors = ["Victor Rebiard--Crépin <victor@nutshell-lab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
env_logger = "0.7.1"
log = "0.4.11"
winit = "0.22.2"
winit_input_helper = "0.7.0"
pixels = "0.1.0"
rayon = "1.3.1"
image = "0.23.8"
